# gist

./: CMakeLists.txt
common/Thrift/: Thrift.csproj  Thrift.sln
doc/: Automation design.docx  Duplicate detection analysis.xlsx  Helper app design.docx  Snaphappi.simp  image-group readme.txt  snappi-dev.UploadHelperApp.html
helper-app/: compile-installer.cmd  compile.cmd  generate-api.cmd  generate-api.sh  helper-app.sln  install-client.cmd  readme.txt  test.html  uninstall-client.cmd
helper-app/InstallDeviceID/: CustomAction.cs  InstallDeviceID.csproj
helper-app/Launcher/: Launcher.csproj  Main.cs
helper-app/api/: Tasks.thrift
helper-app/client/: Settings.cs  app.config  client.csproj
helper-app/client-installer/: License.rtf  Product.wxs  client-installer.wixproj  compile.cmd
helper-app/client-installer-bootstrapper/: Bundle.wxs  client-installer-bootstrapper.wixproj  create-wxi.cmd
helper-app/client-installer-version/: client-installer-version.csproj
helper-app/client-test/: client-test.csproj
image grouping POC/: Cluster.n  Download.n  EvaluateClusters.n  ImageGrouping.proj  Parameters.n  Partition.n  PrettyPrint.n  Process.n  SelectClusters.n  cluster-eval.txt  parameters.txt
image grouping POC/clusters/: newyork.txt  paris.txt  peter-alice.txt  venice.txt
image grouping POC/clusters-ref/: peter-alice.txt  venice.txt
image grouping POC/data/: newyork.json  paris.json  peter-alice.json  test.json  venice.json
image grouping POC/image-grouping-src/: ClusterData.n  DownloadData.n  EvaluateClusters.n  EvaluateClustersTask.n  ExtractDescriptors.n  ITask.n  ITaskItem.n  LoadJsonDataTask.n  LoadReferenceClustersTask.n  Main.n  TaskItem.n  TaskManager.n  TaskMapping.n
image grouping POC/image-grouping-test-src/: MockTask.n  PersistedTaskManagerTest.n  UnpersistedTaskManagerTest.n
image grouping POC/parameters-src/: Parameters.n
image-group/: CMakeLists.txt  gist.cpp  main.cpp
production/: CMakeLists.txt  run-image-group-sample-ordered.sh  run-image-group-sample-unordered.sh  run-image-hash-sample.sh  run-sample-ordered.sh  run-sample-unordered.sh  run-sample.sh
production/event-group/: CMakeLists.txt  EventInfo.hpp  InputData.hpp  JsonIO.cpp  JsonIO.hpp  Main.cpp  PhotoInfo.hpp  Processor.cpp  Processor.hpp
production/image-group/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Main.cpp  gist.cpp  gist.hpp  jsoncpp.cpp  standalone_image.cpp
production/image-group-sample/: output-ordered.json
production/image-group-test/: CMakeLists.txt  Main.cpp  TestCluster.cpp
production/image-group/json/: json.h
production/image-hash/: BitArray.cpp  BitArray.hpp  CMakeLists.txt  ImageHash.cpp  ImageHash.hpp  Main.cpp
production/image-hash-sample/: output.txt
production/sample/: output-ordered.json  output.json  venice.json
research/: BuildAll.proj  parameters.txt  test.cmd
research/cluster-ui-src/: SelectClusters.n
research/clusters/: bali.html  bali.txt  michael.html  michael.txt  paris.html  paris.txt  peter-alice.html  peter-alice.txt  sardinia.html  sardinia.txt  saturday.html  saturday.txt  venice.html  venice.txt
research/clusters-html/: newyork.html  paris.html  peter-alice.html  venice.html
research/clusters-ref/: peter-alice.txt
research/data/: bali.json  paris.json  sardinia.json  saturday.json
research/eval/: bali hash uniqueness.html  hash consistency.txt  hashes.txt  image sample.txt  michael hash uniqueness.html  paris hash uniqueness.html  peter-alice hash uniqueness.html  peter-alice.txt  sardinia hash uniqueness.html  saturday hash uniqueness.html  venice hash uniqueness.html  venice.txt
research/image-grouping-src/: ClusterDataTask.n  ClusterEvaluationItem.n  ClusterItem.n  CreateClusterHtmlTask.n  DescriptorItem.n  DownloadDataTask.n  EvaluateClustersTask.n  ExtractDescriptorsTask.n  GroupShotsTask.n  ITask.n  ITaskData.n  ITaskItem.n  ImageCollectionItem.n  JsonItem.n  LoadJsonDataTask.n  LoadReferenceClustersTask.n  Main.n  TaskManager.n  TaskMapping.n
research/image-grouping-test-src/: MiscTaskManagerTest.n  MockTask.n  MockTaskData.n  MockTaskItem.n  PersistedTaskManagerTest.n  UnpersistedTaskManagerTest.n
research/parameters-src/: Parameters.n
research/prerequisites/: install.cmd  readme.txt
research/pretty-print-src/: PrettyPrint.n
(+301 files in other folders)
